[Merge] Make Teku working with Geth EE (#4431)
* Fix EE API `fee_recipient` field serializer
* Genesis ExecutionPayload should refer eth1 block in `blockHash` field instead of `parentHash`
* Rename `ExecutionPayload.receiptsRoot` to `receiptRoot`
* Fix `ExecutionPayload.baseFeePerGas` constructor property name
* Add null checks for fields in the `ExecutionPayload` constructor
* Fix `ExecutionPayload.baseFeePerGas` field serializer
* Adjust GENESIS_GAS_LIMIT
* Make Bytes32Deserializer more lenient
* Fix engine_forkchoiceUpdated and engine_consensusValidated to pass request object instead of a list of parameters
* Allow returning null in response payload for one-way functions
* Rename engine_forkChoiceUpdated to engine_forkchoiceUpdated
* engine_preparePayload returns UInt not an object containing UInt
* Revert "engine_preparePayload returns UInt not an object containing UInt"
* Fix PreparePayloadResponse deserialization
* Fix `getPayload` argument serialization
* Return back `GENESIS_GAS_LIMIT` constant value as per spec