@@ -14,7 +14,6 @@
 package tech.pegasys.teku.services.powchain.execution.client;
 
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import org.apache.tuweni.bytes.Bytes32;
@@ -25,12 +24,16 @@ import org.web3j.protocol.core.methods.response.EthBlock;
 import org.web3j.protocol.http.HttpService;
 import tech.pegasys.teku.infrastructure.async.SafeFuture;
 import tech.pegasys.teku.infrastructure.unsigned.UInt64;
+import tech.pegasys.teku.services.powchain.execution.client.schema.ConsensusValidatedRequest;
 import tech.pegasys.teku.services.powchain.execution.client.schema.ExecutePayloadResponse;
 import tech.pegasys.teku.services.powchain.execution.client.schema.ExecutionPayload;
+import tech.pegasys.teku.services.powchain.execution.client.schema.ForkchoiceUpdatedRequest;
 import tech.pegasys.teku.services.powchain.execution.client.schema.GenericResponse;
 import tech.pegasys.teku.services.powchain.execution.client.schema.PreparePayloadRequest;
 import tech.pegasys.teku.services.powchain.execution.client.schema.PreparePayloadResponse;
 import tech.pegasys.teku.services.powchain.execution.client.schema.Response;
+import tech.pegasys.teku.services.powchain.execution.client.serializer.UInt64AsHexSerializer;
+import tech.pegasys.teku.spec.executionengine.ExecutionEngineChannel.ConsensusValidationResult;
 
 public class Web3JExecutionEngineClient implements ExecutionEngineClient {
 
@@ -60,7 +63,7 @@ public class Web3JExecutionEngineClient implements ExecutionEngineClient {
     Request<?, GetPayloadWeb3jResponse> web3jRequest =
         new Request<>(
             "engine_getPayload",
-            Collections.singletonList(payloadId.toString()),
+            Collections.singletonList(UInt64AsHexSerializer.toHexString(payloadId)),
             eeWeb3jService,
             GetPayloadWeb3jResponse.class);
     return doRequest(web3jRequest);
@@ -78,12 +81,13 @@ public class Web3JExecutionEngineClient implements ExecutionEngineClient {
   }
 
   @Override
-  public SafeFuture<Response<GenericResponse>> forkChoiceUpdated(
+  public SafeFuture<Response<GenericResponse>> forkchoiceUpdated(
       Bytes32 headBlockHash, Bytes32 finalizedBlockHash) {
     Request<?, GenericWeb3jResponse> web3jRequest =
         new Request<>(
-            "engine_forkChoiceUpdated",
-            List.of(headBlockHash.toHexString(), finalizedBlockHash.toHexString()),
+            "engine_forkchoiceUpdated",
+            Collections.singletonList(
+                new ForkchoiceUpdatedRequest(headBlockHash, finalizedBlockHash)),
             eeWeb3jService,
             GenericWeb3jResponse.class);
     return doRequest(web3jRequest);
@@ -95,7 +99,9 @@ public class Web3JExecutionEngineClient implements ExecutionEngineClient {
     Request<?, GenericWeb3jResponse> web3jRequest =
         new Request<>(
             "engine_consensusValidated",
-            List.of(blockHash.toHexString(), validationResult),
+            Collections.singletonList(
+                new ConsensusValidatedRequest(
+                    blockHash, ConsensusValidationResult.valueOf(validationResult))),
             eeWeb3jService,
             GenericWeb3jResponse.class);
     return doRequest(web3jRequest);
